--- a/manifest.json
+++ b/manifest.json
@@ -8,7 +8,7 @@
     "theme_color": "#FF6347",
     "icons": [
         {
-            "src": "icon-512x512.png",
+            "src": "https://png.pngtree.com/png-clipart/20240717/original/pngtree-food-icon-with-knives-vector-png-image_15579073.png",
             "sizes": "512x512",
             "type": "image/png"
         }
